refactor: standardize GSON usage